# cayley

./: .gitignore  CMakeLists.txt  README.md
include/cayley/: cayley.h
include/cayley/detail/: common.h  mat2.h  mat3.h  mat4.h  transforms.h  vec2.h  vec3.h  vec4.h
src/: common.c  mat2.c  mat3.c  mat4.c  transforms.c  vec2.c  vec3.c  vec4.c
